week03_concert/src/main/java/com/example/concert/common/error/CommonErrorCode.java
package com.example.concert.common.error;

import lombok.Getter;
import org.springframework.http.HttpStatus;

@Getter
public enum CommonErrorCode {
    TOKEN_NOT_ACTIVE(HttpStatus.UNAUTHORIZED, "ET001", "Token is not active");

    private final HttpStatus httpStatus;
    private final String code;
    private final String message;

    CommonErrorCode(HttpStatus httpStatus, String code) {
        this.httpStatus = httpStatus;
        this.code = code;
        this.message = "No msg";
    }

    CommonErrorCode(HttpStatus httpStatus, String code, String message) {
        this.httpStatus = httpStatus;
        this.code = code;
        this.message = message;
    }
}
